--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#161616</color>
+    <color name="colorPrimaryDark">#0f0f0f</color>
+    <color name="colorBackground">#191919</color>
+    <color name="colorBackgroundAccent">#f8191919</color>
+    <color name="colorAccent">#a02020</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorTextPrimary">#646464</color>
     <color name="colorWhiteTransparent">#80FFFFFF</color>
 </resources>
