--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorBackground">
 
 
     <TextView
@@ -13,5 +14,11 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:text="Dummy Text"
+        android:textColor="@color/colorTextPrimary"
         android:textSize="17sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/colorBackgroundAccent" />
 </RelativeLayout>
