--- a/app/src/main/res/layout/fragment_vibrate.xml
+++ b/app/src/main/res/layout/fragment_vibrate.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoveFragment">
+    android:background="@color/colorBackground"
+    tools:context=".VibrationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Movement" />
 
+    <ImageView
+        android:id="@+id/vibration_image"
+        android:layout_width="56dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baseline_vibration_white_18dp"
+        android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/not_vibration_image"
+        android:layout_width="56dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:src="@drawable/round_smartphone_white_18"
+        android:visibility="invisible" />
 </FrameLayout>
