--- a/app/src/main/res/layout/fragment_move.xml
+++ b/app/src/main/res/layout/fragment_move.xml
@@ -3,12 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".MoveFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Movement" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_motion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="80dp"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="@string/str_motion_button"
+            android:textColor="@color/colorWhite" />
+
+        <TextView
+            android:id="@+id/tv_motion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:textColor="@color/colorTextPrimary"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
 </FrameLayout>
