--- a/app/src/main/res/layout/fragment_light.xml
+++ b/app/src/main/res/layout/fragment_light.xml
@@ -3,12 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".LightFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Light" />
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/light_sensor_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="95dp"
+            android:gravity="center"
+            android:text="0.0"
+            android:textColor="@color/colorTextPrimary"
+            android:textIsSelectable="false"
+            android:textSize="85sp" />
+
+        <TextView
+            android:id="@+id/light_heading_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/str_light_sensor_heading"
+            android:textAlignment="center"
+            android:textColor="@color/colorTextPrimary"
+            android:textSize="20sp" />
+
+    </LinearLayout>
 
 </FrameLayout>
